# adventofcode2025

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
day01/: solution.py  test_secret_entrance.py  test_solution.py
day02/: gift_shop.py  test_gift_shop.py
day03/: __init__.py  lobby.py  test_lobby.py
day04/: solution.py
