[project]
name = "adventofcode2025"
version = "0.1.0"
description = "AoC solutions for 2025 edition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
	dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
addopts = "-v"

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = [
	"setuptools>=65.5.1",
	"wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["day*"]
